--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <section>
             <h2>O que é HTML?</h2>
             <p>HTML é uma linguagem de marcação utilizada na construção de páginas na Web.</p>
-            <a href="./o-que-e-html.html">Ler artigo completo</a>
+            <a href="o-q-e-html.html">Ler artigo completo</a>
         </section>
         <section>
             <h2>O que é CSS?</h2>
