--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section>
             <h2>O que é CSS?</h2>
             <p>Cascading Style Sheets (CSS) é um mecanismo para adicionar estilo a um documento web.</p>
-            <a href="./o-que-e-css.html">Ler artigo completo</a>
+            <a href="css-setup.html">Ler artigo completo</a>
         </section>
         <section>
             <h2>O que é JS?</h2>
