--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section>
             <h2>O que é JS?</h2>
             <p>JavaScript é uma linguagem de programação interpretada estruturada, de script em alto nível com tipagem dinâmica fraca e multiparadigma.</p>
-            <a href="./o-que-e-js.html">Ler artigo completo</a>
+            <a href="./js-setup.html">Ler artigo completo</a>
         </section>
 </body>
 </html>
