--- a/index.html
+++ b/index.html
@@ -5,23 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css-styles.css">
 </head>
 <body>
+    
     <h1>Exemplo de artigos</h1>
-        <section>
+    <section class="sec1">
             <h2>O que é HTML?</h2>
             <p>HTML é uma linguagem de marcação utilizada na construção de páginas na Web.</p>
             <a href="o-q-e-html.html">Ler artigo completo</a>
-        </section>
-        <section>
+    </section>
+    <section class="sec2"> 
             <h2>O que é CSS?</h2>
             <p>Cascading Style Sheets (CSS) é um mecanismo para adicionar estilo a um documento web.</p>
             <a href="css-setup.html">Ler artigo completo</a>
-        </section>
-        <section>
+    </section>
+    <section class="sec3">
             <h2>O que é JS?</h2>
             <p>JavaScript é uma linguagem de programação interpretada estruturada, de script em alto nível com tipagem dinâmica fraca e multiparadigma.</p>
             <a href="./js-setup.html">Ler artigo completo</a>
-        </section>
+    </section>
 </body>
 </html>
